[gd_scene load_steps=13 format=1]

[ext_resource path="res://scenes/character.gd" type="Script" id=1]
[ext_resource path="res://images/character.png" type="Texture" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 3, 1, 1, 19, 0, 19, -2, 1 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 3, 11, 1, 19, 0, 19, -2, 11 )

[sub_resource type="RayShape2D" id=3]

custom_solver_bias = 0.0
length = 19.6703

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( 3, 10, 3, 0, 6, 0, 6, 10 )

[sub_resource type="Animation" id=7]

resource/name = "jumping"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=8]

resource/name = "jumping_crouch"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=5]

resource/name = "run"
length = 1.75
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=9]

resource/name = "run_crouch"
length = 1.75
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=6]

resource/name = "stay"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]

resource/name = "stay_crouch"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[node name="Character" type="RigidBody2D" groups=[
"characters",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 4, -1 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 4, -1 )
shapes/1/trigger = true
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 0.227426, 0, 0, 0.152514, 4.67456, 16 )
shapes/2/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 3.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = true
continuous_cd = 0
contacts_reported = 3
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 4, 9 )
texture = ExtResource( 2 )
vframes = 2
hframes = 9
frame = 17

[node name="Collision" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( 4, -1 )
build_mode = 0
polygon = Vector2Array( 3, 1, 1, 19, 0, 19, -2, 1 )
shape_range = Vector2( 0, 0 )
trigger = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionCrouching" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( 4, -1 )
build_mode = 0
polygon = Vector2Array( 3, 11, 1, 19, 0, 19, -2, 11 )
shape_range = Vector2( 1, 1 )
trigger = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 4.67456, 16 )
transform/scale = Vector2( 0.227426, 0.152514 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 2
__meta__ = {
"_edit_lock_": true
}

[node name="AreaUp" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionUp" type="CollisionPolygon2D" parent="AreaUp"]

build_mode = 0
polygon = Vector2Array( 6, 10, 6, 0, 3, 0, 3, 10 )
shape_range = Vector2( 0, 0 )
trigger = true
__meta__ = {
"_edit_lock_": true
}

[node name="WeaponPoint1" type="Position2D" parent="."]

transform/pos = Vector2( 4, 5 )

[node name="WeaponPoint2" type="Position2D" parent="."]

transform/pos = Vector2( 4, 13 )

[node name="Animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/jumping = SubResource( 7 )
anims/jumping_crouch = SubResource( 8 )
anims/run = SubResource( 5 )
anims/run_crouch = SubResource( 9 )
anims/stay = SubResource( 6 )
anims/stay_crouch = SubResource( 10 )
playback/active = true
playback/speed = 4.0
blend_times = [  ]
autoplay = ""


